top banner almost corrected

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
       <link rel="stylesheet" href="./css/styles.css">
    </head>
    <body>
-      <div class="top-banner">
-        <img src="./images/act-logo.svg" alt="Amazon Trust">
+     <div class="title-box">
+       <div class="top-banner">
+          <img src="./images/act-logo.svg" alt="Amazon Trust">
+       </div>
+       <div class="top-slogan">
+          <img src="./images/act-site-strapline.svg" alt="Securing the future">
+       </div>
       </div>
-      <div class="top-slogan">
-        <img src="./images/act-site-strapline.svg" alt="Securing the future">
-      </div>
+
       <div class="the-people">
         <div class="people-description">
           <h2>The People</h2>
